--- a/dreamland-ui/index.html
+++ b/dreamland-ui/index.html
@@ -4,7 +4,7 @@
     <meta base="/manage/">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="shortcut icon" href="/manager/static/favicon.ico">
+    <link rel="shortcut icon" href="/manage/static/favicon.ico">
   </head>
   <body>
     <div id="app"></div>
